--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
 
-<head>
-    <title>HBNB</title>
-</head>
+    <BODY>
+        <H1>Number: {{ n }}</H1>
+    </BODY>
 
-<body>
-    <header>
-        <h1>Number: {{ n }}</h1>
-    </header>
-</body>
-
-</html>
+</HTML>
