--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<HTML lang="en">
 
-    <head>
+    <HEAD>
 
-        <title>HBNB</title>
+        <TITLE>HBNB</TITLE>
 
-    </head>
+    </HEAD>
 
-    <body>
+    <BODY>
 
-        <h1>States</h1>
+        <H1>States</H1>
 
-        <ul>
+        <UL>
 
         {% for state in states %}
 
-            <li>{{ state.id }}: <b>{{ state.name }}</b></li>
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
 
         {% endfor %}
 
-        </ul>
+        </UL>
 
-    </body>
+    </BODY>
 
-</html>
+</HTML>
