--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<HTML lang="en">
+<head>
+    <title>HBNB</title>
+</head>
 
-    <HEAD>
+<body>
+    <h1>States</h1>
 
-        <TITLE>HBNB</TITLE>
-
-    </HEAD>
-
-    <BODY>
-
-        <H1>States</H1>
-
-        <UL>
-
+    <ul>
         {% for state in states|sort(attribute='name') %}
+            <li>{{ state.id }}: <b>{{ state.name }}</b></li>
 
-            <LI>{{ state.id }}: <B>{{ state.name }}</B>
-
-                <UL>
-
+            <ul>
                 {% for city in state.cities|sort(attribute='name') %}
-
-                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-
+                    <li>{{ city.id }}: <b>{{ city.name }}</b></li>
                 {% endfor %}
-
-                </UL>
-
-            </LI>
+            </ul>
 
         {% endfor %}
+    </ul>
+</body>
 
-        </UL>
-
-    </BODY>
-
-</HTML>
+</html>
